welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for (i<- 0 to getMondeHauteur()-1){
        ^Array1:24: error: Int(1) does not take parameters
    for (l<-0 to getMondeHauteur-1()){
                                  ^Array1:26: error: not found: value tab
    	useBrosse(tab(j))
                  ^